# aidata-ui

./: application.toml  pyproject.toml
configs/: README.md  aidata.toml  dg.toml  odplib.toml  pms.toml  scheduler.toml
docs/: README.md  about.md  explanation-idx.md  how-to-guides.md  index.md  reference-idx.md  tutorials-idx.md
docs/explanation/: file_and_directory.md  vcode.md
docs/how-to/: deploy.md  installation.md  vc_platform.md
docs/puml/: models.puml  style.puml  views.puml
docs/puml/configuration/: config-phase.puml  config.puml  phase.puml
docs/puml/planpy/: a.puml  behaivor.puml  component.puml
docs/puml/process/: git-devops.puml
docs/puml/scheduler/: t.puml  worker.puml
docs/reference/: container.md  db.md  docs.md  env.md
docs/tutorial/application/: common.md  pms.md  scheduler.md
docs/tutorial/development/: ap.md  odp.md
docs/tutorial/system/: common.md  plan.md  scheduler.md
examples/: README.md  ui-abc.py  ui-duck.py  ui-protocols.py
src/aidata_ui/: __init__.py
src/ailib/: README.md  __init__.py  ailib.py  cfg_lib.py  log_config.py  logger.py
src/ut/: README.md  __init__.py
tests/: test_ailib.py  test_logger.py
