[project]
name = "aidata-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jessewei", email = "web.jesse@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "mininterface[all]>=1.0.3",
    "toml>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]


[project.scripts]
hi = "ailib.ailib:main"
ut = "ut:main"
